--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Assignment 4</title>
+    <title>JS Assignment 5</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -39,6 +39,7 @@
     </main>
 
 
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
+
 </html>
